fix some horizontal Scroll

--- a/app/Components/HorizontalScroll/HorizontalScroll.scss
+++ b/app/Components/HorizontalScroll/HorizontalScroll.scss
@@ -3,12 +3,12 @@
 }
 
 .scroll-section-inner {
-      height: 100vh;
+      height: 800px;
       width: 450vw;
       display: flex;
       flex-direction: row;
       justify-content: center;
-      align-items: center;
+      align-items: end;
       gap: 50px;
       position: relative;
 }
@@ -17,7 +17,7 @@
       height: 375px;
       width: 500px;
       display: flex;
-      justify-content: center;
+      justify-content: end;
       align-items: center;
 
       h3 {
